improved landing page + new fonts (Roboto)

--- a/styles/font.css
+++ b/styles/font.css
@@ -2,6 +2,14 @@
     font-family: "ppeditorial";
     font-style: normal;
     font-weight: 400;
-    src: url("/PPEditorialNew-Regular.otf") format("truetype");
+    src: url("./PPEditorialNew-Regular.otf") format("truetype");
     unicode-range: U+0000-00FF, U+0100-024F;
+}
+
+@font-face {
+    font-family: "roboto";
+    font-style: normal;
+    font-weight: 400;
+    src: url("./Roboto-Regular.ttf") format("truetype");
+    unicode-range: U+0000-00FF, U+0100-024F
 }
